no longer off center

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,7 +1,7 @@
 .main-section {
-  width: 75%;
-  float: right;
-  height: 100vh;
+  /* width: 75%; */
+  /* float: right; */
+  /* height: 100vh; */
 }
 
 .container {
